# M2Internship_dG1D_Helmholtz

./: .gitignore  CMakeLists.txt  README.md  configure.sh  make.sh
include/dg/: half_stiffness.h  mass.h  mesh.h  quadrature.h  reference_element.h  solver.h
src/dg/: mesh.cpp  reference_element.cpp  solver.cpp
